examples/kubernetes/how-to-enable-proxy-procotcol-clb/nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  selector:
    matchLabels:
      app: nginx 
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx:1.22.1
        ports:
        - containerPort: 80
