examples/kubernetes/how-to-enable-proxy-procotcol-clb/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-myapp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 8080
